--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -9,21 +9,20 @@ on:
 jobs:
   test:
     runs-on: ubuntu-latest
-
     steps:
     - uses: actions/checkout@v4
 
-    - name: Build Docker Image
-      run: docker build -t playwright-tests .
+    - name: Install Dependencies
+      run: npm ci
 
-    - name: Run Playwright Tests in Docker
-      run: |
-        docker run --rm \
-          -v ${{ github.workspace }}/playwright-report:/app/playwright-report \
-          playwright-tests
+    - name: Install Playwright Browsers
+      run: npx playwright install --with-deps
 
-    - uses: actions/upload-artifact@v4
-      if: ${{ always() }}
+    - name: Run Playwright Tests
+      run: npx playwright test
+
+    - name: Upload Playwright Report
+      uses: actions/upload-artifact@v4
       with:
         name: playwright-report
         path: playwright-report/
