--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -1,4 +1,4 @@
-name: Playwright Tests
+name: Playwright Tests with Docker
 
 on:
   push:
@@ -9,17 +9,25 @@ on:
 jobs:
   test:
     runs-on: ubuntu-latest
+
     steps:
-    - uses: actions/checkout@v4
+    - name: Checkout code
+      uses: actions/checkout@v4
 
-    - name: Install Dependencies
-      run: npm ci
+    - name: Set up Node.js
+      uses: actions/setup-node@v4
+      with:
+        node-version: lts/*
 
-    - name: Install Playwright Browsers
-      run: npx playwright install --with-deps
+    - name: Build Docker Image
+      run: docker build -t playwright-tests .
 
-    - name: Run Playwright Tests
-      run: npx playwright test
+    - name: Run Playwright Tests in Docker
+      run: |
+        docker run --rm \
+          -e CI=true \
+          -v ${{ github.workspace }}/playwright-report:/app/playwright-report \
+          playwright-tests
 
     - name: Upload Playwright Report
       uses: actions/upload-artifact@v4
