--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -1,36 +1,26 @@
-name: Playwright Tests with Docker
-
+name: Playwright Tests
 on:
   push:
     branches: [ main, master ]
   pull_request:
     branches: [ main, master ]
-
 jobs:
   test:
+    timeout-minutes: 60
     runs-on: ubuntu-latest
-
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v4
-
-    - name: Set up Node.js
-      uses: actions/setup-node@v4
+    - uses: actions/checkout@v4
+    - uses: actions/setup-node@v4
       with:
         node-version: lts/*
-
-    - name: Build Docker Image
-      run: docker build -t playwright-tests .
-
-    - name: Run Playwright Tests in Docker
-      run: |
-        docker run --rm \
-          -e CI=true \
-          -v ${{ github.workspace }}/playwright-report:/app/playwright-report \
-          playwright-tests
-
-    - name: Upload Playwright Report
-      uses: actions/upload-artifact@v4
+    - name: Install dependencies
+      run: npm ci
+    - name: Install Playwright Browsers
+      run: npx playwright install --with-deps
+    - name: Run Playwright tests
+      run: npx playwright test
+    - uses: actions/upload-artifact@v4
+      if: ${{ !cancelled() }}
       with:
         name: playwright-report
         path: playwright-report/
