--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -1,9 +1,10 @@
 name: Playwright Tests
 on:
   push:
-    branches: [ main, master ]
+    branches: [main, master]
   pull_request:
-    branches: [ main, master ]
+    branches: [main, master]
+
 jobs:
   test:
     timeout-minutes: 60
@@ -17,11 +18,48 @@ jobs:
       run: npm ci
     - name: Install Playwright Browsers
       run: npx playwright install --with-deps
-    - name: Run Playwright tests
-      run: npx playwright test
+    - name: Detect changed files
+      id: changes
+      run: |
+        git diff --name-only ${{ github.event.before }} ${{ github.sha }} > changed-files.txt
+        echo "Changed files:"
+        cat changed-files.txt
+    - name: Run Playwright tests for changed files
+      if: success()
+      run: |
+        # Get the list of changed test files
+        CHANGED_TESTS=$(grep '^tests/.*\.spec\.js$' changed-files.txt || true)
+        
+        if [ -z "$CHANGED_TESTS" ]; then
+          echo "No changed test files. Skipping tests."
+          exit 0
+        fi
+        
+        echo "Running tests for changed files:"
+        echo "$CHANGED_TESTS"
+        
+        # Run Playwright tests for the changed files
+        npx playwright test $CHANGED_TESTS
     - uses: actions/upload-artifact@v4
       if: ${{ !cancelled() }}
       with:
         name: playwright-report
         path: playwright-report/
         retention-days: 30
+    - name: Notify Committer on Failure
+      if: failure()
+      uses: actions/github-script@v6
+      with:
+        script: |
+          const pusher = context.payload.pusher.name;
+          const runUrl = `https://github.com/${context.repo.owner}/${context.repo.repo}/actions/runs/${context.runId}`;
+          const reportPath = `https://github.com/${context.repo.owner}/${context.repo.repo}/suites/${context.runId}/artifacts`;
+
+          await github.repos.createCommitComment({
+            owner: context.repo.owner,
+            repo: context.repo.repo,
+            commit_sha: context.sha,
+            body: `🚨 **Playwright Tests Failed**\n\nHi @${pusher},\n\nSome tests failed for the files you pushed. Please review the [Playwright Report](${reportPath}) or the [Workflow Run](${runUrl}).`
+          });
+
+
