--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -60,7 +60,7 @@ jobs:
       with:
         name: Playwright Tests
         path: results.xml
-        reporter: junit
+        reporter: junit-xml
     - name: Upload JSON Test Results
       if: always()
       uses: actions/upload-artifact@v3
