--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -56,6 +56,20 @@ jobs:
         name: junit-results
         path: results.xml
 
+    - name: Verify and Debug results.xml
+      run: |
+        echo "Checking if results.xml exists:"
+        if [ -f results.xml ]; then
+          echo "results.xml found."
+          echo "Checking permissions:"
+          ls -l results.xml
+        else
+          echo "results.xml not found!"
+          echo "Listing current directory structure:"
+          ls -R
+          exit 1
+        fi
+
     - name: Publish Test Results
       uses: EnricoMi/publish-unit-test-result-action@v2
       if: always()
