--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -41,11 +41,12 @@ jobs:
           echo "$CHANGED_TESTS"
 
           docker run --rm \
-            -e CI=true \
+          -e CI=true \
             -v ${{ github.workspace }}:/app \
             -w /app \
             playwright-tests:latest \
-            bash -c "npx playwright install --with-deps && npx playwright test $CHANGED_TESTS"
+            sh -c "npx playwright install --with-deps && npx playwright test $CHANGED_TESTS"
+
 
       - name: Upload Playwright Report
         uses: actions/upload-artifact@v4
