--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -24,6 +24,8 @@ jobs:
         run: npm ci
       - name: Install Playwright Browsers
         run: npx playwright install --with-deps
+      - name: Mark Git Directory as Safe
+        run: git config --global --add safe.directory /__w/Playwright_Demo/Playwright_Demo
       - name: Detect Changed Files
         id: changes
         run: |
